<resources>
    <string name="app_name">U4T8Database</string>
    <string name="action_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="task_data_empty">"Task name is empty"</string>
    <string name="to_finish_when">To finish when?</string>
    <string name="describe_the_task">Describe the task</string>
    <string name="add_task_activity_name">New Task</string>
    <string name="edit_task_activity_name">Edit Task</string>
    <string name="name_of_the_task_to_do">Name of the task to do</string>

    <string name="priority">Priority</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="show">Show</string>
    <string name="show_all">Show all</string>
    <string name="show_completed">Show Completed</string>
    <string name="show_in_progress">Show In Progress</string>
    <string name="show_not_started">Show Not Started</string>
    <string name="remove">Remove</string>
    <string name="deleted_completed">Deleted Completed</string>
    <string name="delete_all">Delete All</string>
</resources>