<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="dam.angelvilaplana.u4t8database.MainActivity">
    <item android:id="@+id/action_show"
          android:title="@string/show"
          android:icon="@drawable/ic_eye"
          app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/showNotStarted"
                  android:title="@string/show_not_started"
                  app:showAsAction="never"/>
            <item android:id="@+id/showInProgress"
                  android:title="@string/show_in_progress"
                  app:showAsAction="never"/>
            <item android:id="@+id/showCompleted"
                  android:title="@string/show_completed"
                  app:showAsAction="never"/>
            <item android:id="@+id/showAll"
                  android:title="@string/show_all"
                  app:showAsAction="never"/>
        </menu>
    </item>
    <item android:id="@+id/action_remove"
          android:title="@string/remove"
          android:icon="@drawable/ic_trash"
          app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/deleteCompletedTasks"
                  android:title="@string/deleted_completed"
                  app:showAsAction="never"/>
            <item android:id="@+id/deleteAllTasks"
                  android:title="@string/delete_all"
                  app:showAsAction="never"/>
        </menu>
    </item>
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>