<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:context=".TaskActivity"
        android:padding="16dp">

    <EditText
            android:id="@+id/etTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_of_the_task_to_do"
            android:ems="25"
            android:maxLength="25"
            android:textColor="@color/design_default_color_primary_dark"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/etToAccomplish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/to_finish_when"
            android:maxLength="50"
            app:layout_constraintEnd_toEndOf="@+id/etTodo"
            app:layout_constraintStart_toStartOf="@+id/etTodo"
            app:layout_constraintTop_toBottomOf="@+id/etTodo"/>

    <EditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/describe_the_task"
            android:maxLength="100"
            app:layout_constraintEnd_toEndOf="@+id/etToAccomplish"
            app:layout_constraintStart_toStartOf="@+id/etToAccomplish"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/spinPriority"
            android:layout_marginTop="20dp"/>

    <TextView
            android:text="@string/priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPriority"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="@+id/etToAccomplish"
            app:layout_constraintTop_toBottomOf="@+id/etToAccomplish"
            android:layout_marginTop="20dp"
            android:textColor="@color/design_default_color_on_secondary"/>

    <Spinner
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinPriority"
            app:layout_constraintStart_toStartOf="@+id/tvPriority"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority"
            android:layout_marginTop="10dp"/>

    <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@+id/tvPriority"
            app:layout_constraintStart_toStartOf="@+id/spinStatus"
            android:textColor="@color/design_default_color_on_secondary"/>

    <Spinner
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:id="@+id/spinStatus"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/etDescription"/>

    <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/etDescription"
            app:layout_constraintTop_toBottomOf="@+id/etDescription"
            android:layout_marginTop="20dp"/>
    <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/save"
            app:layout_constraintEnd_toStartOf="@+id/btCancel"
            app:layout_constraintTop_toTopOf="@+id/btCancel"
            android:layout_marginEnd="10dp"/>
    <Button
            android:id="@+id/btDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/delete"
            app:layout_constraintTop_toTopOf="@+id/btCancel"
            app:layout_constraintEnd_toStartOf="@+id/btSave"
            android:layout_marginEnd="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>